# cards_simulator

./: CMakeLists.txt  README.md
app/: card.cpp  main.cpp  play.cpp
include/: card.h  play.h
